lineEditor 線描画OK 保存NG

--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -664,7 +664,7 @@
 .annotationEditorLayer {
 /*==== R.Sato 更新 start */
 /*  :is(.freeTextEditor, .inkEditor, .stampEditor) {*/
-  :is(.freeTextEditor, .inkEditor, .stampEditor, lineEditor) {
+  :is(.freeTextEditor, .inkEditor, .stampEditor, .lineEditor) {
 /*==== R.Sato 更新 start */
     & > .resizers {
       position: absolute;
