--- a/web/viewer.css
+++ b/web/viewer.css
@@ -88,6 +88,9 @@
   --toolbarButton-editorFreeText-icon: url(images/toolbarButton-editorFreeText.svg);
   --toolbarButton-editorHighlight-icon: url(images/toolbarButton-editorHighlight.svg);
   --toolbarButton-editorInk-icon: url(images/toolbarButton-editorInk.svg);
+  /* R.Sato 追加 start */
+  --toolbarButton-editorLine-icon: url(images/toolbarButton-editorInk.svg);
+  /* R.Sato 追加 end */
   --toolbarButton-editorStamp-icon: url(images/toolbarButton-editorStamp.svg);
   --toolbarButton-menuArrow-icon: url(images/toolbarButton-menuArrow.svg);
   --toolbarButton-sidebarToggle-icon: url(images/toolbarButton-sidebarToggle.svg);
@@ -567,6 +570,12 @@ body {
 #editorInkButton::before {
   mask-image: var(--toolbarButton-editorInk-icon);
 }
+
+/* R.Sato 追加 start */
+#editorLineButton::before {
+  mask-image: var(--toolbarButton-editorLine-icon);
+}
+/* R.Sato 追加 end */
 
 #editorStampButton::before {
   mask-image: var(--toolbarButton-editorStamp-icon);
